<?xml version="1.0"?>
<package>
  <name>realsenseCamera_aprilTags</name>
  <version>0.1.2</version>
  <description>A package that provides a ROS wrapper for the apriltags C++ package with mods to output raw april tags as well</description>

  <maintainer email="smacens2@illinois.edu">Steve Macenski</maintainer>
  <author>Steve Macenski</author>

  <license>BSD</license>

  <url type="website">https://github.com/stevemacenski/apriltags_rosMod</url>
  <url type="bugtracker">https://github.com/stevemacenski/apriltags_rosMod/issues</url>
  <url type="repository">https://github.com/stevemacenski/apriltags_rosMod</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>apriltags</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
